--- a/src/app/chameleon-reports/dementia-patients/dementia-patients.component.html
+++ b/src/app/chameleon-reports/dementia-patients/dementia-patients.component.html
@@ -11,96 +11,152 @@
     <!-- Entry Date (Date Range for Report Filtering) -->
     <mat-form-field>
       <mat-label>תאריך דיווח - התחלה</mat-label>
-      <input matInput [matDatepicker]="startDatePicker" formControlName="startEntryDate" (dateChange)="applyFilters()">
+      <input
+        matInput
+        [matDatepicker]="startDatePicker"
+        formControlName="startEntryDate"
+        (dateChange)="applyFilters()"
+      />
       <mat-datepicker-toggle matSuffix [for]="startDatePicker"></mat-datepicker-toggle>
       <mat-datepicker #startDatePicker></mat-datepicker>
     </mat-form-field>
-    
+
     <mat-form-field>
       <mat-label>תאריך דיווח - סוף</mat-label>
-      <input matInput [matDatepicker]="endDatePicker" formControlName="endEntryDate" (dateChange)="applyFilters()">
+      <input
+        matInput
+        [matDatepicker]="endDatePicker"
+        formControlName="endEntryDate"
+        (dateChange)="applyFilters()"
+      />
       <mat-datepicker-toggle matSuffix [for]="endDatePicker"></mat-datepicker-toggle>
       <mat-datepicker #endDatePicker></mat-datepicker>
     </mat-form-field>
+
     <mat-slide-toggle
-    [(ngModel)]="showOnlyThreeOrMore"
-    [ngModelOptions]="{ standalone: true }"
-    (change)="applyFilters()">
-    הצג רק 3 אשפוזים ומעלה
-  </mat-slide-toggle>
-  <mat-slide-toggle
-  [(ngModel)]="showOnlyDiagnosis"
-  [ngModelOptions]="{ standalone: true }"
-  (change)="applyFilters()">
-  הצג רק מקור 'יש אבחנה'
-</mat-slide-toggle>
+      [(ngModel)]="showOnlyThreeOrMore"
+      [ngModelOptions]="{ standalone: true }"
+      (change)="applyFilters()"
+    >
+      הצג רק 3 אשפוזים ומעלה
+    </mat-slide-toggle>
+
+    <mat-slide-toggle
+      [(ngModel)]="showOnlyDiagnosis"
+      [ngModelOptions]="{ standalone: true }"
+      (change)="applyFilters()"
+    >
+      הצג רק מקור 'יש אבחנה'
+    </mat-slide-toggle>
 
     <!-- Form Footer with Search, Reset, and Export Options -->
-    <div dir="rtl" class="form-footer" style="display: flex; justify-content: space-between;" >
+    <div dir="rtl" class="form-footer" style="display: flex; justify-content: space-between;">
       <mat-form-field class="long-search-bar" style="flex: 1; margin-right: 10px;">
         <mat-label class="filters" style="color: blue">חיפוש</mat-label>
-        <input matInput formControlName="globalFilter" class="search-input" (input)="applyFilters()" />
+        <input
+          matInput
+          formControlName="globalFilter"
+          class="search-input"
+          (input)="applyFilters()"
+        />
       </mat-form-field>
 
       <div class="button-container" style="display: flex; align-items: center;">
-        <button mat-button (click)="resetFilters()" mat-raised-button color="primary" class="custom-button" matTooltip="Reset Filters">
+        <button
+          mat-button
+          (click)="resetFilters()"
+          mat-raised-button
+          color="primary"
+          class="custom-button"
+          matTooltip="Reset Filters"
+        >
           <i class="material-icons">refresh</i>
         </button>
-        <img src="../../assets/excel.png" alt="Download" (click)="exportToExcel()" class="download-icon icon" width="50px" style="margin-right: 10px;" />
+        <img
+          src="../../assets/excel.png"
+          alt="Download"
+          (click)="exportToExcel()"
+          class="download-icon icon"
+          width="50px"
+          style="margin-right: 10px;"
+        />
         <!-- <button mat-button color="primary" (click)="exportAsPDF()">הדפס PDF</button> -->
-
       </div>
     </div>
   </form>
 
   <!-- Data Table with Pagination and Sorting -->
-  <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8" dir="rtl">
-  
-    <ng-container matColumnDef="Admission_Date">
+  <table
+    mat-table
+    [dataSource]="dataSource"
+    matSort
+    #sort="matSort"
+    class="mat-elevation-z8"
+    dir="rtl"
+  >
+    <!-- admission_Date -->
+    <ng-container matColumnDef="admission_Date">
       <mat-header-cell *matHeaderCellDef mat-sort-header> תאריך קבלה </mat-header-cell>
-      <mat-cell *matCellDef="let element"> {{ element.Admission_Date | date: 'dd/MM/yyyy' }} </mat-cell>
+      <mat-cell *matCellDef="let element"> {{ element.admission_Date | date: 'dd/MM/yyyy' }} </mat-cell>
     </ng-container>
-  
-    <!-- <ng-container matColumnDef="EntryDate">
-      <mat-header-cell *matHeaderCellDef mat-sort-header> תאריך דיווח </mat-header-cell>
-      <mat-cell *matCellDef="let element"> {{ element.EntryDate | date:'dd/MM/yyyy' }} </mat-cell>
-    </ng-container>
-   -->
-    <ng-container matColumnDef="UnitName">
+
+    <!-- unitName -->
+    <ng-container matColumnDef="unitName">
       <mat-header-cell *matHeaderCellDef mat-sort-header> שם מחלקה </mat-header-cell>
-      <mat-cell *matCellDef="let element"> {{ element.UnitName }} </mat-cell>
+      <mat-cell *matCellDef="let element"> {{ element.unitName }} </mat-cell>
     </ng-container>
-  
-    <ng-container matColumnDef="IdNum">
+
+    <!-- idNum -->
+    <ng-container matColumnDef="idNum">
       <mat-header-cell *matHeaderCellDef mat-sort-header> ת.ז </mat-header-cell>
-      <mat-cell *matCellDef="let element"> {{ element.IdNum }} </mat-cell>
+      <mat-cell *matCellDef="let element"> {{ element.idNum }} </mat-cell>
     </ng-container>
-  
-    <ng-container matColumnDef="AdmissionNo">
+
+    <!-- admissionNo -->
+    <ng-container matColumnDef="admissionNo">
       <mat-header-cell *matHeaderCellDef mat-sort-header> מספר אשפוז </mat-header-cell>
-      <mat-cell *matCellDef="let element"> {{ element.AdmissionNo }} </mat-cell>
+      <mat-cell *matCellDef="let element"> {{ element.admissionNo }} </mat-cell>
     </ng-container>
-  
-    <ng-container matColumnDef="FirstName">
+
+    <!-- firstName -->
+    <ng-container matColumnDef="firstName">
       <mat-header-cell *matHeaderCellDef mat-sort-header> שם פרטי </mat-header-cell>
-      <mat-cell *matCellDef="let element"> {{ element.FirstName }} </mat-cell>
+      <mat-cell *matCellDef="let element"> {{ element.firstName }} </mat-cell>
     </ng-container>
-    <ng-container matColumnDef="LastName">
+
+    <!-- lastName -->
+    <ng-container matColumnDef="lastName">
       <mat-header-cell *matHeaderCellDef mat-sort-header> שם משפחה </mat-header-cell>
-      <mat-cell *matCellDef="let element"> {{ element.LastName }} </mat-cell>
+      <mat-cell *matCellDef="let element"> {{ element.lastName }} </mat-cell>
     </ng-container>
-    <ng-container matColumnDef="DataStatus">
-      <mat-header-cell *matHeaderCellDef mat-sort-header> מקור</mat-header-cell>
-      <mat-cell *matCellDef="let element"> {{ element.DataStatus }} </mat-cell>
+
+    <!-- dataStatus -->
+    <ng-container matColumnDef="dataStatus">
+      <mat-header-cell *matHeaderCellDef mat-sort-header> מקור </mat-header-cell>
+      <mat-cell *matCellDef="let element"> {{ element.dataStatus }} </mat-cell>
     </ng-container>
-    <ng-container matColumnDef="HospitalizationsLast6Months">
-      <mat-header-cell *matHeaderCellDef mat-sort-header> כמות אשפוזים בחצי שנה האחרונה</mat-header-cell>
-      <mat-cell *matCellDef="let element"> {{ element.HospitalizationsLast6Months }} </mat-cell>
+
+    <!-- hospitalizationsLast6Months -->
+    <ng-container matColumnDef="hospitalizationsLast6Months">
+      <mat-header-cell *matHeaderCellDef mat-sort-header>
+        כמות אשפוזים בחצי שנה האחרונה
+      </mat-header-cell>
+      <mat-cell *matCellDef="let element"> {{ element.hospitalizationsLast6Months }} </mat-cell>
     </ng-container>
+
     <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-    <mat-row *matRowDef="let row; columns: displayedColumns;" (click)="openPatientDialog(row)" class="clickable-row"></mat-row>
+    <mat-row
+      *matRowDef="let row; columns: displayedColumns;"
+      (click)="openPatientDialog(row)"
+      class="clickable-row"
+    ></mat-row>
   </table>
-  
+
   <!-- ✅ Pagination Control -->
-  <mat-paginator [pageSize]="10" [pageSizeOptions]="[10, 25, 50]" showFirstLastButtons></mat-paginator>
+  <mat-paginator
+    #paginator
+    [pageSize]="10"
+    [pageSizeOptions]="[10, 25, 50]"
+    showFirstLastButtons
+  ></mat-paginator>
 </div>
