--- a/src/app/chameleon-reports/main-surgery/main-surgery.component.html
+++ b/src/app/chameleon-reports/main-surgery/main-surgery.component.html
@@ -42,6 +42,16 @@
                     </mat-option>
                   </mat-select>
                 </mat-form-field>
+<!-- ⬇⬇ ADD: Keren multi-select -->
+<mat-form-field class="filter-field department-field">
+  <mat-label class="filters">קרן</mat-label>
+  <mat-select formControlName="KerenFilter" multiple>
+    <mat-option *ngFor="let k of kerenOptions" [value]="k">
+      {{ k }}
+    </mat-option>
+  </mat-select>
+</mat-form-field>
+<!-- ⬆⬆ ADD: Keren multi-select -->
 
                 <div class="spacer"></div>
 
